MODPUBSUB-270 add test with tenant collection topics enabled